--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,6 +1,10 @@
 .container-about {
     @extend .container;
 
+    @media screen and (min-width: 480px) {
+        display: none;
+    }
+
     &__title {
         font-weight: 700;
         font-size: 36px;
