--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,8 @@ ul {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 p {
@@ -127,11 +129,27 @@ address {
   padding-bottom: 94px;
 }
 
-.container, .container-about {
-  width: 1200px;
+.container, .container-footer, .container-about {
+  width: 100%;
   padding: 0px 15px;
   margin-left: auto;
   margin-right: auto;
+}
+@media screen and (max-width: 767px) {
+  .container, .container-footer, .container-about {
+    width: 100%;
+    max-width: 450px;
+  }
+}
+@media screen and (max-width: 1999px) {
+  .container, .container-footer, .container-about {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container, .container-footer, .container-about {
+    width: 1200px;
+  }
 }
 
 .section, .section-about {
@@ -143,6 +161,11 @@ address {
   padding-top: 0px;
 }
 
+@media screen and (min-width: 480px) {
+  .container-about {
+    display: none;
+  }
+}
 .container-about__title {
   font-weight: 700;
   font-size: 36px;
@@ -154,8 +177,6 @@ address {
 }
 
 .hero {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/backgraund.jpg);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/backgraund.jpg);
   background-color: #2F303A;
   text-align: center;
   display: -webkit-box;
@@ -169,6 +190,38 @@ address {
   background-repeat: no-repeat;
   background-position: center;
   background-size: 1600px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/mobile/splash.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/mobile/splash.jpg);
+}
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px), screen and (-webkit-min-device-pixel-ratio: 2) and (max-width: 767px), screen and (min-resolution: 192dpi) and (max-width: 767px), screen and (min-resolution: 2dppx) and (max-width: 767px) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/mobile/splash@2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/mobile/splash@2x.jpg);
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/tablet/splash.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/tablet/splash.jpg);
+  }
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 768px), screen and (min-resolution: 192dpi) and (min-width: 768px), screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/tablet/splash@2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/tablet/splash@2x.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/desktop/splash.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/desktop/splash.jpg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-width: 1200px) and (min-resolution: 192dpi) and (min-width: 1200px), screen and (min-width: 1200px) and (min-resolution: 2dppx) and (min-width: 1200px) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/desktop/splash@2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/desktop/splash@2x.jpg);
+  }
 }
 .hero .container-hero {
   width: 1200px;
@@ -208,13 +261,22 @@ address {
 
 .list-kontact {
   list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   gap: 50px;
   margin-left: auto;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+@media screen and (max-width: 1199px) {
+  .list-kontact {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 14px;
+  }
 }
 
 .list-kontact li {
@@ -224,7 +286,6 @@ address {
 .list-kontact a {
   color: var(--text-color);
   fill: var(--text-color);
-  padding: 32px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -267,6 +328,28 @@ address {
   margin-bottom: 10px;
 }
 
+.container-footer {
+  gap: 50px;
+}
+@media screen and (max-width: 1199px) {
+  .container-footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: center;
+    -webkit-box-align: center !important;
+        -ms-flex-align: center !important;
+            align-items: center !important;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .footer {
   font-family: "Roboto";
   font-style: normal;
@@ -280,7 +363,7 @@ address {
   padding-bottom: 60px;
 }
 
-.footer .container, .footer .container-about {
+.footer .container, .footer .container-about, .footer .container-footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -307,26 +390,29 @@ address {
   color: var(--accent-color);
 }
 
-.footer-social-block {
-  margin-left: 70px;
-}
-
 .footer h2 {
   color: #ffffff;
 }
 
-.footer-subscription {
-  margin-left: 93px;
+@media screen and (max-width: 1199px) {
+  .footer-subscription {
+    width: 100%;
+  }
 }
 
 .footer-form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: 30px;
 }
-
-.footer-label {
-  margin-right: 12px;
+@media screen and (max-width: 1199px) {
+  .footer-form {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .footer-form input {
@@ -340,6 +426,11 @@ address {
   padding-right: 15px;
   height: 50px;
   width: 358px;
+}
+@media screen and (max-width: 1199px) {
+  .footer-form input {
+    width: 100%;
+  }
 }
 
 .list-footer {
@@ -506,6 +597,13 @@ address {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (max-width: 1999px) {
+  .team-list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .team-title {
   font-weight: 500;
   font-size: 16px;
@@ -528,11 +626,47 @@ address {
   background: #F5F4FA;
 }
 
+.team-item__image {
+  width: 270px;
+}
+@media screen and (max-width: 767px) {
+  .team-item__image {
+    width: 100%;
+    max-width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team-item__image {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team-item__image {
+    width: 270px;
+  }
+}
+
 .team-item {
   width: 270px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+@media screen and (max-width: 767px) {
+  .team-item {
+    width: 100%;
+    max-width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team-item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team-item {
+    width: 270px;
+  }
 }
 
 .team-humen {
@@ -548,11 +682,32 @@ address {
       -ms-flex-pack: center;
           justify-content: center;
   list-style: none;
+  gap: 30px;
+}
+@media screen and (max-width: 1999px) {
+  .list-clients {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 .list-clients li {
   width: 170px;
   height: 92px;
-  margin-right: 30px;
+}
+@media screen and (max-width: 767px) {
+  .list-clients li {
+    width: 190px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .list-clients li {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .list-clients li {
+    width: 170px;
+  }
 }
 .list-clients li:last-child {
   margin-right: 0px;
@@ -597,6 +752,21 @@ address {
   background-color: #F5F4FA;
   border-radius: 4px;
 }
+@media screen and (max-width: 767px) {
+  .feature-image {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .feature-image {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .feature-image {
+    width: 270px;
+  }
+}
 
 .feature-title {
   font-weight: 700;
@@ -615,8 +785,20 @@ address {
   color: var(--text-color);
 }
 
-.feature-item {
-  width: 270px;
+@media screen and (max-width: 767px) {
+  .feature-item {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .feature-item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .feature-item {
+    width: 270px;
+  }
 }
 
 .feature-list {
@@ -624,6 +806,12 @@ address {
   display: -ms-flexbox;
   display: flex;
   gap: 30px;
+}
+@media screen and (max-width: 1199px) {
+  .feature-list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 .aboutlist {
