--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,7 +1,18 @@
 .container {
-    width: 1200px;
+    width: 100%;
     padding: 0px 15px;
     margin-left: auto;
     margin-right: auto;
+
+    @media screen and (max-width: 767px) {
+        width: 100%;
+        max-width: 450px;
+    }
+    @media screen and (max-width: 1999px) {
+        width: 768px;
+    }
+    @media screen and (min-width: 1200px) {
+        width: 1200px;
+    }
 }
 
