--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -4,11 +4,25 @@
     display: flex;
     justify-content: center;
     list-style: none;
+    gap: 30px;
+    
+    @media screen and (max-width: 1999px) {
+        flex-wrap: wrap;
+    }
 
         li {
             width: 170px;
             height: 92px;
-            margin-right: 30px;
+
+            @media screen and (max-width: 767px) {
+                width: 190px;
+            }
+            @media screen and (min-width: 768px) {
+                width: 226px;
+            }
+            @media screen and (min-width: 1200px) {
+                width: 170px;
+            }
 
             &:last-child {
                 margin-right: 0px;
