--- a/sass/layout/_contacts.scss
+++ b/sass/layout/_contacts.scss
@@ -1,10 +1,15 @@
 
 .list-kontact {
     list-style: none;
-    display: flex;
     gap: 50px;
     margin-left: auto;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    display: flex;
+    @media screen and (max-width: 1199px) {
+        flex-direction: column;
+        gap: 14px;
+    }
 }
 
 .list-kontact li {
@@ -14,7 +19,6 @@
 .list-kontact a {
     color: var(--text-color);
     fill: var(--text-color);
-    padding: 32px 0;
     display: flex;
     align-items: center;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
