--- a/sass/layout/_feature.scss
+++ b/sass/layout/_feature.scss
@@ -8,6 +8,17 @@
     margin-bottom: 30px;
     background-color: #F5F4FA;
     border-radius: 4px;
+
+    @media screen and (max-width: 767px) {
+        width: 100%;
+    }
+    @media screen and (min-width: 768px) {
+        width: 354px;
+    }
+    @media screen and (min-width: 1200px) {
+        width: 270px;
+    }
+
 }
 
 .feature-title {
@@ -29,11 +40,25 @@
 
 
 .feature-item {
-    width: 270px;
+    @media screen and (max-width: 767px) {
+        width: 100%;
+    }
+    @media screen and (min-width: 768px) {
+        width: 354px;
+    }
+    @media screen and (min-width: 1200px) {
+        width: 270px;
+    }
+
 }
 
 
 .feature-list {
     display: flex;
     gap: 30px;
+
+    @media screen and (max-width: 1199px) {
+        flex-wrap: wrap;
+    }
+
 }
