--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,3 +1,15 @@
+.container-footer {
+    @extend .container;
+    gap: 50px;
+
+    @media screen and (max-width: 1199px) {
+        display: flex;
+        text-align: center;
+        align-items: center !important; // ?
+        justify-content: center;
+        flex-direction: column;
+    }
+}
 
 .footer {
     font-family: 'Roboto';
@@ -34,21 +46,26 @@
 }
 
 .footer-social-block {
-    margin-left: 70px;
 }
 
 .footer h2 {
     color: #ffffff;
 }
 .footer-subscription {
-    margin-left: 93px;
+    @media screen and (max-width: 1199px) {
+        width: 100%;
+    }
 }
 .footer-form {
     display: flex;
+    gap: 30px;
+    @media screen and (max-width: 1199px) {
+        flex-direction: column;
+    }
+
 }
 
 .footer-label {
-    margin-right: 12px;
 }
 
 .footer-form input {
@@ -61,6 +78,9 @@
     padding-right: 15px;
     height: 50px;
     width: 358px;
+    @media screen and (max-width: 1199px) {
+        width: 100%;
+    }
 }
 
 .list-footer {
