--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,5 +1,4 @@
 .hero {
-    background-image: linear-gradient(  rgba(47, 48, 58, 0.4),   rgba(47, 48, 58, 0.4)), url(../images/backgraund.jpg);
     background-color: #2F303A;
     text-align: center;
     display: flex;
@@ -9,6 +8,30 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: 1600px;
+
+    background-image: linear-gradient(  rgba(47, 48, 58, 0.4),   rgba(47, 48, 58, 0.4)), url(../images/mobile/splash.jpg);
+
+    @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+            screen and (min-resolution: 192dpi) and (max-width: 767px),
+            screen and (min-resolution: 2dppx) and (max-width: 767px) {
+            background-image: linear-gradient(  rgba(47, 48, 58, 0.4),   rgba(47, 48, 58, 0.4)), url(../images/mobile/splash@2x.jpg);
+    }
+    @media screen and (min-width: 768px) {
+        background-image: linear-gradient(  rgba(47, 48, 58, 0.4),   rgba(47, 48, 58, 0.4)), url(../images/tablet/splash.jpg);
+    }
+    @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+            screen and (min-resolution: 192dpi) and (min-width: 768px),
+            screen and (min-resolution: 2dppx) and (min-width: 768px) {
+        background-image: linear-gradient(  rgba(47, 48, 58, 0.4),   rgba(47, 48, 58, 0.4)), url(../images/tablet/splash@2x.jpg);
+    }
+    @media screen and (min-width: 1200px) {
+        background-image: linear-gradient(  rgba(47, 48, 58, 0.4),   rgba(47, 48, 58, 0.4)), url(../images/desktop/splash.jpg);
+    }
+    @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+            screen and (min-width: 1200px) and (min-resolution: 192dpi) and (min-width: 1200px),
+            screen and (min-width: 1200px) and (min-resolution: 2dppx) and (min-width: 1200px) {
+        background-image: linear-gradient(  rgba(47, 48, 58, 0.4),   rgba(47, 48, 58, 0.4)), url(../images/desktop/splash@2x.jpg);
+    }
 
     .container-hero {
         width: 1200px;
