--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,3 +1,8 @@
+.team-list {
+    @media screen and (max-width: 1999px) {
+        flex-wrap: wrap;
+    }
+}
 
 .team-title {
     font-weight: 500;
@@ -21,11 +26,35 @@
     background: #F5F4FA;
 }
 
+.team-item__image {
+    width: 270px;
+    @media screen and (max-width: 767px) {
+        width: 100%;
+        max-width: 450px;
+    }
+    @media screen and (min-width: 768px) {
+        width: 354px;
+    }
+    @media screen and (min-width: 1200px) {
+        width: 270px;
+    }
+}
 
 .team-item {
     width: 270px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+
+    @media screen and (max-width: 767px) {
+        width: 100%;
+        max-width: 450px;
+    }
+    @media screen and (min-width: 768px) {
+        width: 354px;
+    }
+    @media screen and (min-width: 1200px) {
+        width: 270px;
+    }
 }
 
 
