--- a/css/main.css
+++ b/css/main.css
@@ -141,7 +141,7 @@ address {
     max-width: 450px;
   }
 }
-@media screen and (max-width: 1999px) {
+@media screen and (min-width: 768px) {
   .container, .container-footer, .container-about {
     width: 768px;
   }
@@ -161,7 +161,7 @@ address {
   padding-top: 0px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 1199px) {
   .container-about {
     display: none;
   }
@@ -197,6 +197,7 @@ address {
   .hero {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/mobile/splash@2x.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/mobile/splash@2x.jpg);
+    height: 400px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -224,13 +225,11 @@ address {
   }
 }
 .hero .container-hero {
-  width: 1200px;
   padding: 0px 15px;
   margin-left: auto;
   margin-right: auto;
 }
 .hero .container-hero__title {
-  width: 700px;
   margin: 0 auto 30px auto;
   font-weight: 900;
   font-size: 44px;
@@ -276,6 +275,11 @@ address {
         -ms-flex-direction: column;
             flex-direction: column;
     gap: 14px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .list-kontact {
+    display: none;
   }
 }
 
@@ -484,7 +488,6 @@ address {
       flex-wrap: wrap;
   gap: 30px;
 }
-
 .portfolio-link {
   display: block;
 }
@@ -538,6 +541,25 @@ address {
   margin: 0;
 }
 
+@media screen and (max-width: 767px) {
+  .portfolio-item {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .portfolio-item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-item {
+    width: 370px;
+  }
+}
+.portfolio-item__image {
+  width: 100%;
+}
+
 .portfolio-item:nth-child(3n) {
   margin-right: 0;
 }
@@ -564,6 +586,15 @@ address {
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 50px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+@media screen and (max-width: 767px) {
+  .list-filters {
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+  }
 }
 
 .link-item:nth-last-child(-n+3) {
@@ -632,7 +663,6 @@ address {
 @media screen and (max-width: 767px) {
   .team-item__image {
     width: 100%;
-    max-width: 450px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -655,7 +685,6 @@ address {
 @media screen and (max-width: 767px) {
   .team-item {
     width: 100%;
-    max-width: 450px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -696,7 +725,7 @@ address {
 }
 @media screen and (max-width: 767px) {
   .list-clients li {
-    width: 190px;
+    width: 160px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -897,12 +926,17 @@ address {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   padding: 40px;
-  width: 528px;
-  min-height: 581px;
   background-color: #FFFFFF;
   border-radius: 4px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  width: 528px;
+  min-height: 581px;
+}
+@media screen and (max-width: 767px) {
+  .modal {
+    width: 100%;
+  }
 }
 
 .modal-link {
@@ -973,7 +1007,7 @@ address {
   color: #757575;
   border-radius: 4px;
   height: 40px;
-  width: 448px;
+  width: 100%;
   padding: 11px 12px 11px 32px;
 }
 .contact-form input[type=text]:hover, .contact-form input[type=text]:focus, .contact-form input[type=tel]:hover, .contact-form input[type=tel]:focus, .contact-form input[type=email]:hover, .contact-form input[type=email]:focus {
@@ -988,7 +1022,7 @@ address {
   padding-left: 10px;
   padding-right: 10px;
   height: 120px;
-  width: 448px;
+  width: 100%;
   padding: 12px 16px 12px 16px;
   display: block;
 }
@@ -1067,7 +1101,7 @@ address {
   outline: 1px solid var(--accent-color);
 }
 .contact-form .text-up {
-  width: 448px;
+  width: 100%;
   height: 23px;
   left: 576px;
   top: 261px;
@@ -1090,6 +1124,11 @@ address {
   letter-spacing: 0.02em;
   color: var(--title-color);
   margin-left: 93px;
+}
+@media screen and (max-width: 767px) {
+  .page-navigation {
+    display: none;
+  }
 }
 
 .page-navigation a {
@@ -1120,6 +1159,109 @@ address {
 
 .link-nav:hover::after {
   background: #2196F3;
+}
+
+.button-hamburger {
+  position: absolute;
+  right: 10px;
+  top: 30px;
+  z-index: 0;
+  cursor: pointer;
+  display: none;
+}
+@media screen and (max-width: 767px) {
+  .button-hamburger {
+    display: inline-block;
+  }
+}
+
+.mobile-menu {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  background: white;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  display: none;
+}
+.mobile-menu .mobile-menu-container {
+  height: 100%;
+}
+.mobile-menu .mobile-menu-navigation {
+  margin: 40px;
+  margin-top: 48px;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 47px;
+  letter-spacing: 0.02em;
+  gap: 32px;
+  height: 50%;
+}
+.mobile-menu .mobile-menu-navigation__link {
+  color: #212121;
+  text-decoration: none;
+}
+.mobile-menu .mobile-menu-contacts {
+  margin: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 30px;
+  font-weight: 500;
+}
+.mobile-menu .mobile-menu-contacts__tel {
+  font-size: 34px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  color: #2196F3;
+  text-decoration: none;
+}
+.mobile-menu .mobile-menu-contacts__email {
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: #757575;
+  text-decoration: none;
+}
+.mobile-menu .mobile-menu-social {
+  margin: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 5px;
+}
+.mobile-menu .mobile-menu-social a {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  text-decoration: none;
+  color: var(--accent-color);
+}
+.mobile-menu .mobile-menu-social a:not(:last-child) {
+  padding-right: 5px;
+  border-right: 1px solid #ccc;
+}
+
+.mobile-menu.is-open {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .social-person-list {
