--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -8,7 +8,7 @@
         width: 100%;
         max-width: 450px;
     }
-    @media screen and (max-width: 1999px) {
+    @media screen and (min-width: 768px) {
         width: 768px;
     }
     @media screen and (min-width: 1200px) {
