--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -11,7 +11,7 @@
         color: #757575;
         border-radius: 4px;
         height: 40px;
-        width: 448px;
+        width: 100%;
         padding: 11px 12px 11px 32px;    
 
         &:hover, &:focus {
@@ -28,7 +28,7 @@
         padding-left: 10px;
         padding-right: 10px;
         height: 120px;
-        width: 448px;
+        width: 100%;
         padding: 12px 16px 12px 16px;
         display: block;        
 
@@ -114,7 +114,7 @@
 
     
     .text-up {
-        width: 448px;
+        width: 100%;
         height: 23px;
         left: 576px;
         top: 261px;
