--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -22,11 +22,15 @@
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 40px;
-    width: 528px;
-    min-height: 581px;
     background-color:  #FFFFFF;;
     border-radius: 4px;
     box-shadow: 0px 1px 3px rgba(0 0 0 / 12%), 0px 1px 1px rgba(0 0 0 / 14%), 0px 2px 1px rgba(0 0 0 / 20%);
+
+    width: 528px;
+    min-height: 581px;
+    @media screen and (max-width: 767px) {
+        width: 100%;
+    }
 }
 
 .modal-link {
