--- a/sass/components/_pagenavigation.scss
+++ b/sass/components/_pagenavigation.scss
@@ -8,6 +8,10 @@
     letter-spacing: 0.02em;
     color: var(--title-color);
     margin-left: 93px;
+
+    @media screen and (max-width: 767px) {
+        display: none;
+    }
 }
 
 .page-navigation a {
@@ -38,4 +42,103 @@
 }
 .link-nav:hover::after {
     background: #2196F3;
+}
+
+
+.button-hamburger {
+    position: absolute;
+    right: 10px;
+    top: 30px;
+    z-index: 0;
+    cursor: pointer;
+    display: none;
+    
+    @media screen and (max-width: 767px) {
+        display: inline-block;
+    }
+}
+
+.mobile-menu {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    background: white;
+    flex-direction: column;
+    display: none;
+
+    &__close {
+
+    }
+
+    .mobile-menu-container {
+        height: 100%;
+    }
+
+    .mobile-menu-navigation {
+        margin: 40px;
+        margin-top: 48px;
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        font-weight: 500;
+        font-size: 40px;
+        line-height: 47px;
+        letter-spacing: 0.02em;
+        gap: 32px;
+        height: 50%;
+
+        &__item {
+        }
+        &__link {
+            color: #212121;
+            text-decoration: none;
+        }
+    }
+
+    .mobile-menu-contacts {
+        margin: 40px;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        font-weight: 500;
+
+        &__tel {
+            font-size: 34px;
+            line-height: 40px;
+            letter-spacing: 0.02em;
+            color: #2196F3;
+            text-decoration: none;
+        }
+        &__email {
+            font-size: 24px;
+            line-height: 28px;
+            letter-spacing: 0.02em;
+            color: #757575;
+            text-decoration: none;
+        }
+    }
+
+    .mobile-menu-social {
+        margin: 40px;
+        display: flex;
+        gap: 5px;
+
+        a {
+            font-weight: 500;
+            font-size: 18px;
+            line-height: 22px;
+            text-decoration: none;
+            color: var(--accent-color);
+            &:not(:last-child) {
+                padding-right: 5px;
+                border-right: 1px solid #ccc;
+            }
+        }
+    }
+}
+
+.mobile-menu.is-open {
+    display: flex;
 }
