--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,7 +1,7 @@
 .container-about {
     @extend .container;
 
-    @media screen and (min-width: 480px) {
+    @media screen and (max-width: 1199px) {
         display: none;
     }
 
