--- a/sass/layout/_contacts.scss
+++ b/sass/layout/_contacts.scss
@@ -10,6 +10,9 @@
         flex-direction: column;
         gap: 14px;
     }
+    @media screen and (max-width: 767px) {
+        display: none;
+    }
 }
 
 .list-kontact li {
