--- a/sass/layout/_feature.scss
+++ b/sass/layout/_feature.scss
@@ -29,6 +29,7 @@
     text-transform: uppercase;
     color: var(--title-color);
     margin-bottom: 10px;
+    text-align: center;
 }
 
 .feature-text  {
