--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,13 +2,24 @@
     @extend .container;
     gap: 50px;
 
-    @media screen and (max-width: 1199px) {
+
+    @media screen and (max-width: 767px) {
         display: flex;
         text-align: center;
         align-items: center !important; // ?
         justify-content: center;
         flex-direction: column;
     }
+
+    @media screen and (max-width: 1199px) {
+        display: flex;
+        text-align: center;
+        align-items: top;
+        justify-content: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
 }
 
 .footer {
