--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -45,7 +45,7 @@
         h1 {
             @media screen and (max-width: 767px) {
                 font-size: 26px;
-                line-height: 42px;
+                line-height: 1.36;
             }
         }
         &__title {
