--- a/css/main.css
+++ b/css/main.css
@@ -1294,7 +1294,11 @@ address {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  display: none;
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu.is-open {
+    display: none;
+  }
 }
 
 .social-person-list {
