--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -8,10 +8,15 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    max-width: 1600px;
+    max-width: 1200px;
     margin: 0 auto;
     background-image: linear-gradient(  rgba(47, 48, 58, 0.4),   rgba(47, 48, 58, 0.4)), url(../images/mobile/splash.jpg);
 
+    @media screen and (max-width: 767px) {
+        height: 400px;
+        max-width: 480px;
+        background-size: cover;;
+    }
     @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
             screen and (min-resolution: 192dpi) and (max-width: 767px),
             screen and (min-resolution: 2dppx) and (max-width: 767px) {
@@ -22,6 +27,7 @@
     @media screen and (min-width: 768px) {
         background-image: linear-gradient(  rgba(47, 48, 58, 0.4),   rgba(47, 48, 58, 0.4)), url(../images/tablet/splash.jpg);
         background-size: cover;
+        max-width: 768px;
     }
     @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
             screen and (min-resolution: 192dpi) and (min-width: 768px),
@@ -30,6 +36,7 @@
     }
     @media screen and (min-width: 1200px) {
         background-image: linear-gradient(  rgba(47, 48, 58, 0.4),   rgba(47, 48, 58, 0.4)), url(../images/desktop/splash.jpg);
+        max-width: 1200px;
     }
     @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2) and (min-width: 1200px),
             screen and (min-width: 1200px) and (min-resolution: 192dpi) and (min-width: 1200px),
