--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -30,6 +30,7 @@
     min-height: 581px;
     @media screen and (max-width: 767px) {
         width: 100%;
+        max-width: 450px;
     }
     
 }
