--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,6 +1,8 @@
 .container-footer {
     @extend .container;
-    gap: 50px;
+    gap: 60px;
+    min-width: 1200px;
+    justify-content: space-between;
 
 
     @media screen and (max-width: 767px) {
@@ -15,7 +17,7 @@
         display: flex;
         text-align: center;
         align-items: top;
-        justify-content: center;
+        justify-content: space-around;
         flex-direction: row;
         flex-wrap: wrap;
     }
@@ -86,6 +88,7 @@
     width: 358px;
     @media screen and (max-width: 1199px) {
         width: 100%;
+        max-width: 450px;
     }
 }
 
